--- a/index.html
+++ b/index.html
@@ -634,7 +634,6 @@
             <a href="https://github.com/simmy2303/Real-Time-Handwriting-Detection-and-Recognition-App-FYP--Public/tree/main" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Real Time Handwriting Detection and Recognition App (FYP)</div>
               <div class="project-date">Jan 2025 – June 2025</div>
-            </a>
           </div>
           <div class="project-body">
             <div class="project-tech">
@@ -647,7 +646,7 @@
         </div>
         <div class="project-media">
           <img src="FYP.jpg" alt="Screens from the Snap2Speech handwriting-to-speech app" class="project-image">
-        </div>
+        </div>  </a>
       </article>
 
       <!-- COVID-19 DM -->
@@ -657,7 +656,7 @@
             <a href="https://github.com/simmy2303/Predicting-Daily-New-Cases-of-COVID-19-Using-Data-Mining-Techniques-" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Predicting Daily New COVID 19 Cases</div>
               <div class="project-date">June 2025</div>
-            </a>
+          
           </div>
           <div class="project-body">
             <div class="project-tech">
@@ -669,7 +668,7 @@
         </div>
         <div class="project-media">
           <img src="DataMining.png" alt="Graphs from COVID-19 daily cases prediction project" class="project-image">
-        </div>
+        </div>  </a>
       </article>
 
       <!-- Hangman -->
@@ -679,7 +678,7 @@
             <a href="https://github.com/simmy2303/hangman_scalafx" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Hangman Game</div>
               <div class="project-date">Aug 2024</div>
-            </a>
+            
           </div>
           <div class="project-body">
             <div class="project-tech"><span class="tag">Scala</span><span class="tag">ScalaFX</span></div>
@@ -688,7 +687,7 @@
         </div>
         <div class="project-media">
           <img src="hangman.png" alt="Hangman game UI" class="project-image">
-        </div>
+        </div></a>
       </article>
 
       <!-- Budgeting Tracker -->
@@ -698,7 +697,6 @@
             <a href="https://github.com/simmy2303/Budgeting-Tracker" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Budgeting Tracker</div>
               <div class="project-date">Mar 2024</div>
-            </a>
           </div>
           <div class="project-body">
             <div class="project-tech"><span class="tag">JavaScript</span><span class="tag">HTML</span><span class="tag">CSS</span></div>
@@ -707,7 +705,7 @@
         </div>
         <div class="project-media">
           <img src="budget.png" alt="Budgeting tracker dashboard preview" class="project-image">
-        </div>
+        </div>  </a>
       </article>
 
       <!-- Weather App -->
@@ -717,7 +715,6 @@
             <a href="https://github.com/simmy2303/Weather-App-API" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Weather Forecast Application</div>
               <div class="project-date">Mar 2024</div>
-            </a>
           </div>
           <div class="project-body">
             <div class="project-tech"><span class="tag">HTML</span><span class="tag">CSS</span></div>
@@ -726,7 +723,7 @@
         </div>
         <div class="project-media">
           <img src="weather.png" alt="Weather app mockup" class="project-image">
-        </div>
+        </div>  </a>
       </article>
 
       <!-- To Do -->
@@ -736,7 +733,6 @@
             <a href="https://github.com/simmy2303/To-Do-List" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">To Do List Application</div>
               <div class="project-date">Feb 2024</div>
-            </a>
           </div>
           <div class="project-body">
             <div class="project-tech"><span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">JavaScript</span></div>
@@ -745,7 +741,7 @@
         </div>
         <div class="project-media">
           <img src="todo.png" alt="To-do app interface" class="project-image">
-        </div>
+        </div>  </a>
       </article>
 
 
@@ -756,7 +752,6 @@
             <a href="https://github.com/simmy2303/Digital-Image-Processing-Project" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Paragraph Extraction and Face Recognition (DIP)</div>
               <div class="project-date">Jan 2024</div>
-            </a>
           </div>
           <div class="project-body">
             <div class="project-tech"><span class="tag">Python</span><span class="tag">OpenCV</span></div>
@@ -765,7 +760,7 @@
         </div>
         <div class="project-media">
           <img src="dip.png" alt="Digital image processing output samples" class="project-image">
-        </div>
+        </div>  </a>
       </article>
 
       <!--  Artificial Neural Network -->
@@ -775,7 +770,6 @@
             <a href="https://github.com/simmy2303/Application-of-Artificial-Neural-Network-ANN-" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Application of Artificial Neural Network (ANN)</div>
               <div class="project-date">Jan 2025</div>
-            </a>
           </div>
           <div class="project-body">
             <div class="project-tech"><span class="tag">Java</span></div>
@@ -785,7 +779,7 @@
         </div>
         <div class="project-media">
           <img src="ann.png" alt="Boat racing game screenshot" class="project-image">
-        </div>
+        </div>  </a>
       </article>
       <!-- Netflix Clone -->
       <article class="card project" data-tags="app viz">
@@ -794,7 +788,6 @@
             <a href="https://github.com/simmy2303/Netflix-Home-Page-Clone" title="Click to see project" target="_blank" rel="noopener">
               <div class="project-title">Netflix Home Page Clone</div>
               <div class="project-date">Jan 2024</div>
-            </a>
           </div>
           <div class="project-body">
             <div class="project-tech"><span class="tag">HTML</span><span class="tag">CSS</span></div>
@@ -803,7 +796,7 @@
         </div>
         <div class="project-media">
           <img src="netflix.png" alt="Netflix landing page clone" class="project-image">
-        </div>
+        </div>  </a>
       </article>
     </div>
   </div>
