--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 </section>
 
 
-  <!-- Awards -->
+  <!-- AwardsS -->
 <section id="awards" class="section">
   <div class="container">
     <h2 class="section-title">awards and scholarships</h2>
