--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <li><a href="#skills">skills</a></li><li><a href="#experience">experience</a></li>
         <li><a href="#education">education</a></li><li><a href="#activities">extracurriculars</a></li>
         <li><a href="#projects">projects</a></li><li><a href="#interests">interests</a></li><li><a href="#awards">awards</a></li>
-        <li><a href="#languages">languages</a></li><li><a href="#publications">publications</a></li>
+       <li><a href="#publications">publications</a></li> <li><a href="#languages">languages</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
@@ -925,20 +925,6 @@
   </div>
 </section>
 
-  <!-- Languages -->
-  <section id="languages" class="section">
-    <div class="container">
-      <h2 class="section-title">languages</h2>
-      <div class="grid-auto">
-        <div class="card center"><p class="title-strong">English</p><p>Native or Bilingual</p></div>
-        <div class="card center"><p class="title-strong">Malay</p><p>Limited Working</p></div>
-        <div class="card center"><p class="title-strong">Mandarin</p><p>Elementary</p></div>
-        <div class="card center"><p class="title-strong">Punjabi</p><p>Limited Working</p></div>
-
-      </div>
-    </div>
-  </section>
-
 <!-- Publications & Featured Work -->
 <section id="publications" class="section">
   <div class="container">
@@ -995,6 +981,22 @@
     </div>
   </div>
 </section>
+
+  <!-- Languages -->
+  <section id="languages" class="section">
+    <div class="container">
+      <h2 class="section-title">languages</h2>
+      <div class="grid-auto">
+        <div class="card center"><p class="title-strong">English</p><p>Native or Bilingual</p></div>
+        <div class="card center"><p class="title-strong">Malay</p><p>Limited Working</p></div>
+        <div class="card center"><p class="title-strong">Mandarin</p><p>Elementary</p></div>
+        <div class="card center"><p class="title-strong">Punjabi</p><p>Limited Working</p></div>
+
+      </div>
+    </div><br><br>
+  </section>
+
+
 
   <!-- Contact -->
   <footer id="contact">
