--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --glass:rgba(0,0,0,.65);--border:rgba(100,255,218,.25);--blur:20px
     }
     html,body{height:100%}
-    body{font-family:'Poppins', sans-serif;color:#fff;background:#000;overflow-x:hidden;line-height:1.6;cursor:none}
+    body{font-family:'Orbitron', sans-serif;color:#fff;background:#000;overflow-x:hidden;line-height:1.6;cursor:none}
       a {
       text-decoration: none;   /* removes underline */
       color: rgb(255, 255, 255);            /* or whatever color you want */
