--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="astronaut.jpg">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Outfit:wght@300;400;600&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 <br>
   <title>Portfolio - Simran Kaur Chahal</title>
   
@@ -17,7 +17,7 @@
       --glass:rgba(0,0,0,.65);--border:rgba(100,255,218,.25);--blur:20px
     }
     html,body{height:100%}
-    body{font-family:'Orbitron', sans-serif;color:#fff;background:#000;overflow-x:hidden;line-height:1.6;cursor:none}
+    body{font-family:'Outfit', sans-serif;color:#fff;background:#000;overflow-x:hidden;line-height:1.7;cursor:none}
       a {
       text-decoration: none;   /* removes underline */
       color: rgb(255, 255, 255);            /* or whatever color you want */
