--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       <h1>Simran Kaur Chahal</h1>
       <p class="subtitle">Computer Science Graduate | Data Science & AI/ML Enthusiast</p>
       <div class="quote">"Innovation distinguishes between a <strong>leader</strong> and a follower." — Steve Jobs</div>
-      <p><bold>Open to full time roles in Data Science, Engineering, Analystics, AI, and Software Engineering</bold></p>
+      <p><bold>Open to full-time opportunities across Data Science, Data Analytics, AI, Data Engineering, and Software Engineering domains.</bold></p>
       <br>
       <a href="#projects" class="cta-button">explore projects</a>
     </div>
@@ -719,7 +719,7 @@
               <div class="project-date">Jan 2025</div>
           </div>
           <div class="project-body">
-            <div class="project-tech"><span class="tag">Java</span></div>
+            <div class="project-tech"><span class="tag">Python</span><span class="tag">PyTorch</span><span class="tag">GUI</span></div>
             <p> Built an ANN to predict major weather conditions (sunny vs rainy) using precipitation,
         temperature, wind speed, and condition features.</p>
           </div>
