--- a/index.html
+++ b/index.html
@@ -990,7 +990,18 @@
     </div>
   </div>
 </section>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8211222810129023"
+     crossorigin="anonymous"></script>
+<!-- ADUNIT -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8211222810129023"
+     data-ad-slot="4105720402"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <!-- Languages -->
   <section id="languages" class="section">
     <div class="container">
